# scrapy-azure

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
docs/: .readthedocs.yaml  credentials.md  feedstorages.md  index.md  mkdocs.yml
scrapy_azure/: addon.py  feedstorage.py
tests/: test_addon.py  test_feedstorage.py
