[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "scrapy-azure"
dynamic = ["version"]
description = "A Scrapy extension to integrate with Microsoft Azure services"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Shun Takebayashi" },
]
classifiers = [
  "Framework :: Scrapy",
]
dependencies = [
  "scrapy~=2.0",
  "azure-identity~=1.0",
  "azure-storage-blob~=12.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
python = "3.8"
dependencies = [
  "black==24.2.0",
  "isort==5.13.2",
  "mypy==1.9.0",
  "ruff==0.3.2",
  "pytest==8.1.1",
  "mkdocs==1.5.3",
]

[tool.hatch.envs.default.scripts]
format = "black . && isort ."
lint = "black --check . && isort --check . && mypy . && ruff check ."
test = "pytest"

[[tool.hatch.envs.ci.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.black]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["F"]
